src/test/ui/span/dropck_direct_cycle_with_drop.stderr
error[E0597]: `d2` does not live long enough
  --> $DIR/dropck_direct_cycle_with_drop.rs:46:20
   |
LL |     d1.p.set(Some(&d2));
   |                    ^^ borrowed value does not live long enough
...
LL | }
   | - `d2` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: `d1` does not live long enough
  --> $DIR/dropck_direct_cycle_with_drop.rs:48:20
   |
LL |     d2.p.set(Some(&d1));
   |                    ^^ borrowed value does not live long enough
LL |     //~^ ERROR `d1` does not live long enough
LL | }
   | - `d1` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to 2 previous errors

If you want more information on this error, try using "rustc --explain E0597"
